--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,7 @@
     <meta content="" name="author" />
     <!-- end: META -->
     <!-- start: MAIN CSS -->
-    <link rel="stylesheet" type="text/css" href="dist/style.css" />
+    <link rel="stylesheet" type="text/css" href="dist/main.css" />
 </head>
 <body>
     <div id="order_index_list_datatable_loading" style="width: 100%; height: 100%; background-color: transparent;"><div class="icon-spin hby-spinner icon-"></div></div>
