--- a/example/index.html
+++ b/example/index.html
@@ -23,4 +23,6 @@
     <div id="order_index_list_datatable_loading" style="width: 100%; height: 100%; background-color: transparent;"><div class="icon-spin hby-spinner icon-"></div></div>
 </body>
 </html>
-<script src="dist/main.js"></script>
+<script>
+    document.write('<script src="dist/main.js?v=' + new Date().getTime() + '"><\/script>');
+</script>
