--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,9 @@
     <!-- end: META -->
     <script type="text/javascript" src="dist/jquery.js"></script>
     <!-- start: MAIN CSS -->
-    <link rel="stylesheet" type="text/css" href="dist/main.css?20140427" />
+    <script type="text/javascript">
+        document.write('<link rel="stylesheet" type="text/css" href="dist/main.css?v=' + new Date().getTime() + '" />');
+    </script>
 </head>
 <body>
     <div id="order_index_list_datatable_loading" style="width: 100%; height: 100%; background-color: transparent;"><div class="icon-spin hby-spinner icon-"></div></div>
